use gruvbox colorscheme

--- a/config/kitty/kitty-linux.conf
+++ b/config/kitty/kitty-linux.conf
@@ -2,9 +2,9 @@ include general.conf
 
 editor /opt/nvim-linux64/bin/nvim
 
-background_opacity .95
+background_opacity 1.00
 
 hide_window_decorations always
 
 font_family CaskaydiaCove Nerd Font
-font_size 11.0
+font_size 10.0
