update kitty configuration

--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -8,9 +8,10 @@ tab_powerline_style round
 
 disable_ligatures never
 
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family Fira Code Mono
+bold_font Fira Code Bold
+italic_font Maple Mono Italic
+bold_italic_font Maple Mono BoldItalic
 
 enabled_layouts splits,fat,grid,horizontal,stack,tall,vertical
 
