--- a/config/kitty/kitty-macos.conf
+++ b/config/kitty/kitty-macos.conf
@@ -2,15 +2,16 @@ include general.conf
 
 editor /opt/homebrew/bin/nvim
 
-background_opacity 0.95
+background_opacity 1.00
 background_blur 32
 
+window_padding_width 8
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
 macos_titlebar_color system
 macos_colorspace displayp3
 
-font_size 11.0
+font_size 12.0
 
 font_hinting full
 font_antialias true
