--- a/config/kitty/kitty-linux.conf
+++ b/config/kitty/kitty-linux.conf
@@ -1,6 +1,9 @@
 include general.conf
+kitty_mod ctrl+shift
+include mappings.conf
 
 editor /opt/nvim-linux64/bin/nvim
+scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
 background_opacity 1.00
 
