--- a/config/kitty/kitty-macos.conf
+++ b/config/kitty/kitty-macos.conf
@@ -1,6 +1,9 @@
 include general.conf
+kitty_mod cmd+shift
+include mappings.conf
 
 editor /opt/homebrew/bin/nvim
+scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
 background_opacity 1.00
 background_blur 32
