--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -1,57 +1,32 @@
 include themes/gruvbox_dark_hard.conf
 
-draw_minimal_borders yes
+# https://github.com/ryanoasis/nerd-fonts/releases/download/v3.3.0/NerdFontsSymbolsOnly.zip
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
+disable_ligatures cursor
 
-tab_bar_edge top
-tab_bar_style powerline
-tab_powerline_style round
-
+# Fonts
 disable_ligatures never
-
 font_family Fira Code Mono
 bold_font Fira Code Bold
 italic_font Maple Mono Italic
 bold_italic_font Maple Mono BoldItalic
 
+# Cursor
+cursor_trail 3
+cursor none
+
+# Misc
+scrollback_lines 10000
+touch_scroll_multiplier 2.0
+copy_on_select yes
+enable_audio_bell no
 enabled_layouts splits,fat,grid,horizontal,stack,tall,vertical
+remember_window_size yes
+draw_minimal_borders yes
+tab_bar_edge top
+tab_bar_style powerline
+tab_separator " "
+# tab_powerline_style round
+# dynamic_background_opacity yes
 
-map f1 launch --cwd=current
-map f2 launch --cwd=current --location=vsplit lazygit
-map f3 launch --cwd=current --location=vsplit ranger
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed side by side if the existing window is wide or
-# one above the other if the existing window is tall.
-map f4 launch --location=split --cwd=current
-
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed one above the othe
-map f5 launch --location=hsplit --cwd=current
-
-# Create a new window splitting the space used by the existing one so that
-# the two windows are placed side by side
-map f6 launch --location=vsplit --cwd=current
-
-# Rotate the current split, changing its split axis from vertical to
-# horizontal or vice versa
-map f7 layout_action rotate
-
-map ctrl+shift+enter launch --cwd=current --location=vsplit
-map ctrl+shift+t launch --cwd=current --type=tab
-
-# Move the active window in the indicated direction
-map shift+up move_window up
-map shift+left move_window left
-map shift+right move_window right
-map shift+down move_window down
-
-# Move the active window to the indicated screen edge
-map alt+shift+up layout_action move_to_screen_edge top
-map alt+shift+left layout_action move_to_screen_edge left
-map alt+shift+right layout_action move_to_screen_edge right
-map alt+shift+down layout_action move_to_screen_edge bottom
-
-# Switch focus to the neighboring window in the indicated direction
-map alt+left neighboring_window left
-map alt+right neighboring_window right
-map alt+up neighboring_window up
-map alt+down neighboring_window down
+tab_title_template "{title}{fmt.bold}{'  ' if num_windows > 1 and layout_name == 'stack' else ''}"
