--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -1,7 +1,7 @@
 map f2 launch --cwd=current --location=vsplit lazygit
 map f3 launch --cwd=current --location=vsplit ranger
-map kitty_mod+] next_tab
-map kitty_mod+[ previous_tab
+map ctrl+tab        next_tab
+map ctrl+shift+tab previous_tab
 map kitty_mod+t new_tab
 #: Move tab forward
 map kitty_mod+. move_tab_forward
@@ -21,6 +21,8 @@ map kitty_mod+right neighboring_window right
 map kitty_mod+up neighboring_window up
 map kitty_mod+down neighboring_window down
 map kitty_mod+r start_resizing_window
+map kitty_mod+w close_window
+map shift+cmd+q close_os_window
 # Move the active window to the indicated screen edge
 map alt+shift+up layout_action move_to_screen_edge top
 map alt+shift+left layout_action move_to_screen_edge left
