--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -5,11 +5,12 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 disable_ligatures cursor
 
 # Fonts
+# kitty list-fonts
 disable_ligatures never
-font_family Fira Code Mono
-bold_font Fira Code Bold
-italic_font Maple Mono Italic
-bold_italic_font Maple Mono BoldItalic
+font_family Fira Code
+# bold_font Fira Code Bold
+# italic_font Maple Mono Italic
+# bold_italic_font Maple Mono Bold Italic
 
 # Cursor
 cursor_trail 3
