update kitty (again)

--- a/config/kitty/kitty-linux.conf
+++ b/config/kitty/kitty-linux.conf
@@ -5,8 +5,8 @@ include mappings.conf
 editor /opt/nvim-linux64/bin/nvim
 scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
-background_opacity 1.00
+background_opacity .80
 
 hide_window_decorations always
 
-font_size 10.0
+font_size 11.0
