--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -29,3 +29,8 @@ map alt+shift+left layout_action move_to_screen_edge left
 map alt+shift+right layout_action move_to_screen_edge right
 map alt+shift+down layout_action move_to_screen_edge bottom
 map kitty_mod+h show_scrollback
+
+
+
+map kitty_mod+alt+equal   change_font_size all +2.0
+map kitty_mod+alt+minus change_font_size all -2.0
