kitty macos font compat
- for some reason the font names are different

--- a/config/kitty/kitty-linux.conf
+++ b/config/kitty/kitty-linux.conf
@@ -5,8 +5,11 @@ include mappings.conf
 editor /opt/nvim-linux64/bin/nvim
 scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
-background_opacity .80
 
 hide_window_decorations always
 
+font_family FiraCode Nerd Font
+bold_font FiraCode Nerd Font Bold
+italic_font Maple Mono NF Italic
+bold_italic_font Maple Mono NF Bold Italic
 font_size 11.0
