--- a/config/kitty/kitty-macos.conf
+++ b/config/kitty/kitty-macos.conf
@@ -7,7 +7,7 @@ scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
 background_opacity 1.00
 background_blur 32
-
+macos_option_as_alt yes
 window_padding_width 8
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
