--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -31,6 +31,5 @@ map alt+shift+down layout_action move_to_screen_edge bottom
 map kitty_mod+h show_scrollback
 
 
-
-map kitty_mod+alt+equal   change_font_size all +2.0
-map kitty_mod+alt+minus change_font_size all -2.0
+# map kitty_mod+alt+equal   change_font_size all +2.0
+# map kitty_mod+alt+minus change_font_size all -2.0
