--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -4,24 +4,22 @@ include themes/gruvbox_dark_hard.conf
 # Fonts
 # kitty list-fonts
 # disable_ligatures never
-font_family FiraCode Nerd Font
-bold_font FiraCode Nerd Font Bold
-italic_font Maple Mono NF Italic
-bold_italic_font Maple Mono NF Bold Italic
 # https://github.com/ryanoasis/nerd-fonts/releases/download/v3.3.0/NerdFontsSymbolsOnly.zip
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
-disable_ligatures cursor
 
 window_padding_width 4
 
 # Cursor
 cursor_trail 3
 cursor none
+disable_ligatures cursor
+background_opacity .80
 
 # Misc
 scrollback_lines 10000
 touch_scroll_multiplier 2.0
 copy_on_select yes
+
 enable_audio_bell no
 enabled_layouts splits,fat,grid,horizontal,stack,tall,vertical
 remember_window_size yes
@@ -30,7 +28,6 @@ tab_bar_edge top
 tab_bar_style powerline
 tab_separator " "
 # tab_powerline_style round
-# dynamic_background_opacity yes
 
 tab_title_template "{title}{fmt.bold}{'  ' if num_windows > 1 and layout_name == 'stack' else ''}"
 # todo: if program is nvim or vim, then the tab title should be the relative folder name
