macos stuff for kitty and karabiner

--- a/config/kitty/kitty-macos.conf
+++ b/config/kitty/kitty-macos.conf
@@ -5,7 +5,7 @@ include mappings.conf
 editor /opt/homebrew/bin/nvim
 scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
-background_opacity 1.00
+# dynamic_background_opacity yes
 background_blur 32
 macos_option_as_alt yes
 window_padding_width 8
@@ -15,3 +15,7 @@ macos_titlebar_color system
 macos_colorspace displayp3
 
 font_size 11.0
+font_family Fira Code
+bold_font Fira Code Bold
+italic_font Maple Mono NF Italic
+bold_italic_font Maple Mono NF Bold Italic
