update kitty binding for moving windows

--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -16,10 +16,14 @@ map kitty_mod+z toggle_layout stack
 map kitty_mod+enter launch --location=split --cwd=current
 map kitty_mod+\ launch --location=vsplit --cwd=current
 map kitty_mod+minus launch --location=hsplit --cwd=current
+
 map kitty_mod+left neighboring_window left
 map kitty_mod+right neighboring_window right
 map kitty_mod+up neighboring_window up
 map kitty_mod+down neighboring_window down
+map kitty_mod+] next_window
+map kitty_mod+[ previous_window
+
 map kitty_mod+r start_resizing_window
 map kitty_mod+w close_window
 map shift+cmd+q close_os_window
@@ -28,6 +32,7 @@ map alt+shift+up layout_action move_to_screen_edge top
 map alt+shift+left layout_action move_to_screen_edge left
 map alt+shift+right layout_action move_to_screen_edge right
 map alt+shift+down layout_action move_to_screen_edge bottom
+
 map kitty_mod+h show_scrollback
 
 
