enable dynamic opacity for kitty

--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -34,7 +34,24 @@ map alt+shift+right layout_action move_to_screen_edge right
 map alt+shift+down layout_action move_to_screen_edge bottom
 
 map kitty_mod+h show_scrollback
-
-
 # map kitty_mod+alt+equal   change_font_size all +2.0
 # map kitty_mod+alt+minus change_font_size all -2.0
+
+## Opacity
+map kitty_mod+a>m set_background_opacity +0.1
+map kitty_mod+a>l set_background_opacity -0.1
+
+## Breakdown of syntax
+# map → Defines a keybinding in Kitty.
+# kitty_mod → Represents a modifier key. On macOS, you've set kitty_mod as Cmd + Shift.
+# a>m → Defines the key sequence to trigger the action:
+# a is the prefix key.
+# m is the key you press after a to execute the command.
+# set_background_opacity +0.1 → Increases the background opacity by 0.1.
+# a>l → Defines another key sequence.
+# set_background_opacity -0.1 → Decreases the background opacity by 0.1.
+#
+# How It Works:
+# To increase opacity: Press Cmd + Shift + a, then press m.
+# To decrease opacity: Press Cmd + Shift + a, then press l.
+
