--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -13,7 +13,10 @@ window_padding_width 4
 cursor_trail 3
 cursor none
 disable_ligatures cursor
+
+# background
 background_opacity .80
+dynamic_background_opacity yes
 
 # Misc
 scrollback_lines 10000
