Update tab title templating

--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -15,7 +15,7 @@ cursor none
 disable_ligatures cursor
 
 # background
-background_opacity .80
+background_opacity .75
 dynamic_background_opacity yes
 
 # Misc
@@ -30,7 +30,5 @@ draw_minimal_borders yes
 tab_bar_edge top
 tab_bar_style powerline
 tab_separator " "
-# tab_powerline_style round
 
-tab_title_template "{title}{fmt.bold}{'  ' if num_windows > 1 and layout_name == 'stack' else ''}"
-# todo: if program is nvim or vim, then the tab title should be the relative folder name
+shell_integration enabled no-title
