Change tab title binding for kitty

--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -31,4 +31,6 @@ tab_bar_edge top
 tab_bar_style powerline
 tab_separator " "
 
+# Always show tab bar
+tab_bar_min_tabs 1 
 shell_integration enabled no-title
