--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -8,7 +8,7 @@ map kitty_mod+. move_tab_forward
 #: Move tab backward
 map kitty_mod+, move_tab_backward
 #: Set tab title
-map kitty_mod+alt+t set_tab_title
+map f1 set_tab_title
 # map shift+cmd+i     set_tab_title
 map kitty_mod+e toggle_layout splits
 map kitty_mod+m toggle_layout fat
