Update bindings and wallpaper

--- a/config/sway/config
+++ b/config/sway/config
@@ -5,7 +5,10 @@
 # Read `man 5 sway` for a complete reference.
 
 ### Wallpaper
-output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/pixelart/image16.png fill
+# output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/pixelart/image16.png fill
+#
+# Using irl/Colors.png wallpaper until I can setup swayFX
+output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/Colors.png fill
 
 ### Output configuration
 
@@ -163,8 +166,8 @@ bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
 
-# bindsym alt+Shift+j nop swap_with_next_window
-# bindsym alt+Shift+k nop swap_with_prev_window
+bindsym alt+Shift+j nop swap_with_next_window
+bindsym alt+Shift+k nop swap_with_prev_window
 # bindsym alt+Shift+$left move left
 # bindsym alt+Shift+$down move down
 # bindsym alt+Shift+$up move up
@@ -175,6 +178,11 @@ bindsym $mod+Shift+$down nop move down
 bindsym $mod+Shift+$up nop move up
 bindsym $mod+Shift+$right nop move right
 
+# bindsym alt+shift+$left nop reflectx, focus left, swap container with mark swap
+# bindsym alt+shift+$down mark swap, focus down, swap container with mark swap
+# bindsym alt+shift+$up mark swap, focus up, swap container with mark swap
+# bindsym alt+shift+$right mark swap, focus right, swap container with mark swap
+#
 # TODO: Add balance
 bindsym $mod+Shift+y nop reflecty
 bindsym $mod+Shift+x nop reflectx
