--- a/config/sway/config
+++ b/config/sway/config
@@ -190,27 +190,27 @@ bindsym $mod+Shift+t nop transpose
 
 
 # Workspaces:
-bindsym ctrl+1 workspace number 1
-bindsym ctrl+2 workspace number 2
-bindsym ctrl+3 workspace number 3
-bindsym ctrl+4 workspace number 4
-bindsym ctrl+5 workspace number 5
-bindsym ctrl+6 workspace number 6
-bindsym ctrl+7 workspace number 7
-bindsym ctrl+8 workspace number 8
-bindsym ctrl+9 workspace number 9
-bindsym ctrl+0 workspace number 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
-bindsym ctrl+Shift+1 move container to workspace number 1
-bindsym ctrl+Shift+2 move container to workspace number 2
-bindsym ctrl+Shift+3 move container to workspace number 3
-bindsym ctrl+Shift+4 move container to workspace number 4
-bindsym ctrl+Shift+5 move container to workspace number 5
-bindsym ctrl+Shift+6 move container to workspace number 6
-bindsym ctrl+Shift+7 move container to workspace number 7
-bindsym ctrl+Shift+8 move container to workspace number 8
-bindsym ctrl+Shift+9 move container to workspace number 9
-bindsym ctrl+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 # Layout:
 # You can "split" the current object of your focus with
@@ -310,10 +310,18 @@ bar {
 	swaybar_command waybar
 }
 
-gaps inner 8
+gaps inner 6
 gaps outer 3
 
-default_border pixel 2
+default_border pixel 5
+# smart_borders isn't visually great for dual monitors where onky one app is open on both displayed workspaces
+# smart_borders on 
 
 client.focused #8ec07c #8ec07c #665c54 #8ec07c
+
+# client.focused #83a598 #83a598 #665c54 #83a598
+
+# client.focused #458588 #458588 #665c54 #458588
+ 
+
 # client.focused #61AFEF #61AFEF #5c6370 #61AFEF
