--- a/config/wofi/config
+++ b/config/wofi/config
@@ -2,7 +2,7 @@ show=drun
 term=kitty
 print_command=true
 always_parse_args=true
-allow_images = true
+allow_images = false
 image_size = 32
 width = 750
 height = 400
