--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -34,3 +34,9 @@ tab_separator " "
 # Always show tab bar
 tab_bar_min_tabs 1 
 shell_integration enabled no-title
+
+# this fixes the laggy issue we have on the 4k monitor
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
